<resources>
    <string name="app_name">세종대학교 학술정보원</string>

    <string name="school_name">세종대학교</string>
    <string name="school_engname">SEJONG UNIVERSITY</string>

    <string name="guide_borrow_page_name">책 대여 안내</string>
    <string name="guide_ipad_page_name">아이패드 대여 안내</string>
    <string name="guide_floor_page_name">층별 이용안내</string>

    <!--Firebase-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

    <!--DialogFlow-->
    <string name="korean_lang_code">ko</string>

    <!--ChatBot-->
    <string name="chatbot_say_hello">안녕하세요! 챗봇 동천이입니다.\n무엇을 도와드릴까요?\n\n* 학술정보원 정보가 알고싶으면?\nex) 일요일에 도서관 열어?, 공지사항, 이용 안내(층별, 대출, 아이패드 이용 안내)\n\n* 모바일 바코드로 책 대출은 어떻게 해?\nex) 책은 어떻게 빌려?\n\n\* 스터디룸 예약은?\nex) 15시 4명이 스터디룸 알려줘.\n\n* 열람실 현황은?\nex) A열람실 자리 있어?\n\n* 열람실 불편신고는?\n=> ‘신고’ 라고 말씀해주세요.\n\n* 도서 검색 어떻게?\nex) 파우스트 찾아줘\n\n* 희망 도서 추천 어떻게?\nex) 자유론 신청해줘</string>
    <string name="chatbot_bot_name">동천이</string>

    <string name="chatbot_report_dialog_title">열람실 불편 신고 접수</string>
    <string name="chatbot_report_dialog_content">신고 내용을 접수하시겠습니까?\n\n신고 내용은 자동 저장되며, 지정 좌석 사용자에게 푸시 알림이 전송됩니다.\n\n허위 신고 시 불이익이 발생할 수 있습니다.</string>
    <string name="chatbot_report_dialog_yes">예</string>
    <string name="chatbot_report_dialog_no">아니오</string>
    <string name="chatbot_report_dialog_toast_yes">열람실 불편 신고가 접수되었습니다.</string>
    <string name="chatbot_report_dialog_toast_no">취소되었습니다.</string>

    <!--StudyRoom-->
    <string name="study_room_search_date">예약날짜</string>
    <string name="study_room_search_date_tint">날짜를 선택해주세요.</string>
    <string name="study_room_search_time">예약시간</string>
    <string name="study_room_search_time_tint">시간을 선택해주세요.</string>
    <string name="study_room_person">사용인원</string>
    <string name="study_room_select_btn">수정</string>
    <string name="study_room_time_amount">이용시간</string>
    <string name="study_room_location">예약장소</string>
    <string name="study_room_search">조회하기</string>
    <string name="study_room_guide_line">- 학기중 토요일 및 방학 중 개방 시간 : 10:00 ~ 16:00 \n- 방학 중 토요일은 휴실입니다. \n- 당일예약 스터디룸을 제외하고 7일 이내 예약이 가능합니다. \n- 예약 후 미사용 시 예약이 취소해야 합니다. 위반 시 예약자는 1개월간 예약할 수 없습니다. (예약시간 기준 20분 경과 시 사용제한)</string>

    <string name="study_room_reserve_day">예약날짜</string>
    <string name="study_room_reserve_person">예약인원</string>
    <string name="study_room_reserve_time">예약시간</string>
    <string name="study_room_reserve_use_time">이용시간</string>

    <string name="study_room_reserve_table">예약현황</string>
    <string name="study_room_reserve_start">예약하기</string>

    <string name="study_room_reserve_dlg_title">스터디룸 예약</string>
    <string name="study_room_reserve_dlg_content">위의 사항으로 스터디룸을 예약하시겠습니까? \n\n예약 후 미사용 시 예약을 취소해야 합니다. 위반 시 예약자는 1개월간 예약할 수 없습니다. \n(예약시간 기준 20분 경과 시 사용제한)</string>

    <!--Menu-->
    <string name="menu_login">로그인</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_notice_detail">공지사항 상세</string>
    <string name="menu_study_room">스터디룸</string>
    <string name="menu_reading_room">열람실</string>
    <string name="menu_ebook">E - book</string>
    <string name="menu_mobile">모바일이용증</string>
    <string name="menu_barcord">바코드 검색</string>
    <string name="menu_search_book">도서 검색</string>
    <string name="menu_request_book">희망 도서</string>
    <string name="menu_usage">이용안내</string>
    <string name="menu_declare">간편신고</string>
    <string name="menu_chatbot">동천이와의 대화방</string>
    <string name="menu_study_room_reserve">예약조회</string>
    <string name="menu_search_book_detail">도서 상세</string>
    <string name="menu_search_book_hope">희망도서</string>


    <!--Login-->
    <string name="login_bottom">학술정보원 모바일 앱</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_stid">학번</string>
    <string name="login_button">로그인</string>
    <string name="login_checkbox">자동 로그인</string>
    <string name="login_type_student">학부생</string>
    <string name="login_type_staff">교직원</string>
    <string name="todo">TODO</string>
    <string name="fail_login_access">아이디 혹은 비밀번호가 올바르지 않습니다.</string>

    <!--SearchBook-->
    <string name="search_book_detail_title">도서 상세</string>
    <string name="search_book_search">검색</string>
    <string name="search_book_lend_true">대출가능</string>
    <string name="search_book_lend_false">대출불가</string>

    <string name="real_search_book_text">자료검색</string>

    <string name="real_search_book_category_all">전체</string>
    <string name="real_search_book_category_dan_dongseo">단행본/동서양</string>
    <string name="real_search_book_category_gan">연속간행물</string>
    <string name="real_search_book_category_mul">멀티미디어</string>
    <string name="real_search_book_category_hak">학위논문</string>
    <string name="real_search_book_category_dan_dong">단행본/동양서</string>
    <string name="real_search_book_category_ej_in">eJournal/국내</string>
    <string name="real_search_book_category_ej_out">eJournal/국외</string>
    <string name="real_search_book_category_eb_ej">eBook/eJournal</string>
    <string name="real_search_book_category_eb">eBook</string>


    <!--ReadingRoom-->
    <string name="reading_room_A">A 열람실</string>
    <string name="reading_room_B">B 열람실</string>
    <string name="reading_room_C">C 열람실</string>
    <string name="reading_room_D_A">D-A 열람실</string>
    <string name="reading_room_D_B">D-B 열람실</string>
    <string name="reading_room_3_A">3층 A 열람실</string>
    <string name="reading_room_3_B">3층 B 열람실</string>
    <string name="reading_room_see_seat">좌석보기</string>
    <string name="reading_room_fullscreen">크게보기</string>
    <string name="reading_room_url">http://210.107.226.14/seat/roomview5.asp?room_no=</string>
    <string name="reading_room_0_num">0</string>
    <string name="reading_room_A_num">188</string>
    <string name="reading_room_B_num">188</string>
    <string name="reading_room_C_num">208</string>
    <string name="reading_room_D_A_num">156</string>
    <string name="reading_room_D_B_num">174</string>
    <string name="reading_room_3_A_num">236</string>
    <string name="reading_room_3_B_num">160</string>

    <!--Navigation Drawer-->
    <string name="nav_lend_book">대출현황</string>
    <string name="nav_lend_book_record">대출/반납 기록</string>
    <string name="nav_appointment_book">예약 현황</string>

    <string name="nav_header_title">동천이</string>
    <string name="nav_header_subtitle">dongcheon@sju.ac.kr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Ebook URL-->
    <string name="ebookUrl">https://ebook.sejong.ac.kr/m/main.asp</string>

    <!--Camera View Comment-->
    <string name="first_camera_comment">책 뒷면의 바코드를 사각형 안에 맞추고 1~2초간 기다려주세요</string>
    <string name="second_camera_comment">바코드 검색을 통해 도서 대출을 할 수 있습니다.</string>
    <string name="backButton_comment">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="barcode_bookTitle">책 제목</string>
    <string name="barcode_bookAuthor">작가</string>
    <string name="barcode_bookBorrow_Comment">대출하시겠습니까?</string>
    <string name="borrow_success">도서대출 완료!</string>
    <string name="borrow_cancle">대여 취소</string>

    <!--Report-->
    <string name="report_dialog_title">열람실 불편신고 접수</string>
    <string name="report_room_title">열람실</string>
    <string name="report_reason_title">신고사유</string>
    <string name="report_seat_title">좌석번호</string>
    <string name="report_seat_edit_hint">세자리 이내의 좌석번호</string>
    <string name="report_reason_area">신고 내용 (50자 이내)</string>
    <string name="report_cancel">취소하기</string>
    <string name="report_accept">접수하기</string>
    <string name="report_request_type_seat">자리 번호를 입력해주세요.</string>

    <!--Guide-->
    <string name="guide_book_borrow_title">대출/연장/예약 안내</string>
    <string name="guide_book_borrow_index_1">1. 대출 안내</string>
    <string name="guide_book_borrow_index_2">2. 대출 방법</string>
    <string name="guide_book_borrow_contents_2">- 모바일 : 빌리고자 하는 도서의 바코드를 리딩 후 대출 가능  - 현장 : 해당 자료실에서 도서를 찾아 대출실(2층)에서 본인의 ID카드 및 모바일열람증을 제시하여 대출 (대출시 본인의 대출처리를 직접 확인하여 불이익을 당하는 일이 없도록 주의하십시오.)</string>
    <string name="guide_book_borrow_index_3">3. 연장 안내</string>
    <string name="guide_book_borrow_contents_3"><![CDATA[본인의 대출도서를 연장하고자 할 경우 2회에 한하여 연장할 수 있으며(1회 연장기간은 연장시점을 기준으로 규정 대출기간의 &#189;),연장된 반납예정일이 원래의 반납예정일보다 이전 날짜인 경우에는 연장이 불가합니다.\n\n- 유의사항\n\n1. 연장은 2회까지만 가능합니다.\n\n2. 연장된 반납예정일이 원래의 반납예정일보다 이전 날짜인 경우에는 연장이 불가합니다.\n\n3. 연장하고자 하는 도서가 다른 이용자에 의하여 예약이 되어 있는 경우에는 연장이 불가합니다.\n\n4. 전임교원의 경우 연장1회로 제한됩니다.]]></string>
    <string name="guide_book_borrow_index_4">4. 예약 안내</string>
    <string name="guide_book_borrow_contents_4">현재 대출중인 도서를 예약함으로써 도서가 반납되었을 때 우선적으로 대출이 가능합니다.  \n\n- 유의사항  \n\n1. 예약버튼이 보이지 않는 경우는 예약가능한 도서는 한 도서당 3명만 예약가능하기 때문입니다. 다만, 복본(Copy본)이 있는 경우 복본 수만큼 예약인원이 증가됩니다. 그리고 1인당 예약할 수 있는 도서는 3권입니다.  \n\n2. 예약도서가 반납되면 도착통보 이메일이 예약자에게 자동적으로 발송되므로 홈페이지의 개인정보에 본인의 이메일주소를 반드시 입력해 놓아야 합니다.  \n\n3. 반납된 예약도서는 3일간 대출실의 예약서가에 비치합니다. 3일이 경과한 후에는 자동적으로 예약권(대출우선권)이 소멸되므로 3일안에 예약도서를 대출해야 합니다.  \n\n4. 예약한 도서를 예약기간 동안 3번 미대출할 경우 30일 동안 예약을 하실 수 없습니다.</string>
    <string name="guide_ipad_borrow_contexts_4">- 학생증/신분증 지참 → 학술정보원 2층 AV실 방문 → 비치된 iPAD 대여신청서를 작성  \n\n- 대여된 iPAD는 교육용만으로 사용하시기 바랍니다.  \n\n- 대여된 iPAD에 보안설정시 반드시 메모하여 장치 초기화가 될 수 있도록 하여 주시기 바랍니다. (반납시 비밀번호 재설정을 위해 설정된 비밀번호 해제후 반납)  \n\n- 반납시 저장된 데이터는 모두 다른 저장매체에 복사 또는 삭제후 반납하시기 바랍니다.  \n\n- 반납예정일을 경과하여 반납한 경우는 1달 동안 대여가 중지됩니다.  \n\n- 대여된 iPAD가 사용부주의로 인한 파손/훼손시는 고장수리비가 청구될 수 있습니다.  \n\n- 대여된 iPAD 분실시 해당 장치와 동일한 제품 또는 해당 제품 구입가로 변상하여야 합니다.</string>
    <string name="guide_ipad_borrow_title">i-Pad 대여 안내</string>
    <string name="guide_ipad_borrow_index_1">1. 대상</string>
    <string name="guide_ipad_borrow_contents_1">학부 재학생 및 교강사</string>
    <string name="guide_ipad_borrow_index_2">2. 대여</string>
    <string name="guide_ipad_borrow_contents_2">New iPad, WiFi / 32GB</string>

    <!--Barcode-->
    <string name="barcode_bookTitle_01">Google 구글 웹로그 분석</string>
    <string name="barcode_bookAuthor_01">미나가와 아키히로 저</string>
    <string name="barcode_bookTitle_02">J주홍글씨</string>
    <string name="barcode_bookAuthor_02">N.호돈 저</string>
    <string name="barcode_bookBarcode_01">9788968482410</string>
    <string name="barcode_bookBarcode_02">9788934400165</string>

    <!--Request Book-->
    <string name="self_request_book_kinds">도서 구분</string>
    <string name="self_request_book_name">자료명</string>
    <string name="self_request_book_Author">저자</string>
    <string name="self_request_book_company">출판사</string>
    <string name="self_request_book_publishYear">출판연도</string>
    <string name="self_request_book_ISBN">ISBN</string>
    <string name="self_request_guide_line">- 학술정보원 소장자료 중 원하는 자료가 없을 경우, 이용자가 직접 원하는 자료를 신청할 수 있는 서비스입니다. \n- 신청한도는 1회 3책, 연간 10책(30만원)이내입니다. (예산삭감으로 한시적 조치) \n- 신청한 도서는 보통 국내서는 2-3주, 국외서는 4-5주 정도 소요되며, 출판상황에 따라 입수일에 차이가 있을 수 있습니다. \n - 신청된 도서 중 대학 도서관 소장자료로 부적합하다고 판단되는 도서는 아래와 같은 경우 신청이 취소됩니다. \n - 기 소장도서(복본) : 학술정보원에 이미 있는 자료를 신청한 경우 \n - 만화류 : 만화애니메이션학과에서 필요한 경우 외의 교양만화류, 카툰 류 등 \n - 문제집류(기출문제집, 모의고사, 워크북 등) 및 최신성이 떨어지는 자료(인쇄연도가 5년 이상 지난 자료) \n - 소장 형태 부적합 도서 : 8절 이상의 도서형태, 문고판(포켓용도서), 제본형태 도서(바인더, 스프링) 등 \n - 서지사항 부정확 : 구입에 필요한 기본적인 정보를 기입하지 않았거나 잘못된 정보기입, 또는 국제표준도서번호(ISBN)로 확인이 어려운 경우 \n - 아동/청소년 도서 : 학술적인 목적이 확인되지 않은 아동용, 청소년용 수준의 도서 및 중고등용 학습도서 \n - 소장 주체 부적합 도서 : 사이비 종교서적, 외설물, 무협지, 판타지 소설, 인터넷 소설, 성인 소설 등 \n - 기타 대학도서관 장서로써 부적절하다고 학술전산처장이 판단하는 경우</string>
    <string name="self_request_button">희망 도서 신청</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
