<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/large_font_size"
        android:text="@string/report_dialog_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding" >

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/declareRoom"
            android:text="@string/report_room_title"
            style="@style/Text.ReportContentTitle"/>

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/declareRoom"
            android:layout_below="@id/declareRoom"
            android:id="@+id/declareReason"
            android:text="@string/report_reason_title"
            style="@style/Text.ReportContentTitle"/>

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/declareReason"
            android:layout_below="@id/declareReason"
            android:id="@+id/declareNum"
            android:text="@string/report_seat_title"
            style="@style/Text.ReportContentTitle"/>

        <Spinner
            app:layout_constraintTop_toTopOf="@id/declareRoom"
            app:layout_constraintBottom_toBottomOf="@id/declareRoom"
            app:layout_constraintLeft_toRightOf="@id/declareNum"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/declareRoomSp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Spinner
            app:layout_constraintTop_toTopOf="@id/declareReason"
            app:layout_constraintBottom_toBottomOf="@id/declareReason"
            app:layout_constraintLeft_toRightOf="@id/declareNum"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/declareReasonSp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            app:layout_constraintTop_toTopOf="@id/declareNum"
            app:layout_constraintBottom_toBottomOf="@id/declareNum"
            app:layout_constraintLeft_toRightOf="@id/declareNum"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/declarePosition"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="@integer/report_seat_num_length"
            android:hint="@string/report_seat_edit_hint"
            android:textSize="@dimen/normal_font_size"
            android:background="@drawable/rectangle_info"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/declareContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/declare_content_height"
        android:layout_margin="@dimen/declare_content_margin"
        android:background="@drawable/border"
        android:gravity="top"
        android:padding ="@dimen/declare_content_padding"
        android:maxLength="@integer/report_reason_area_length"
        android:textSize="@dimen/normal_font_size"
        android:hint="@string/report_reason_area" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/declareCancleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/report_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font_size"/>

        <Button
            android:id="@+id/declareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/report_accept"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font_size"/>
    </LinearLayout>

</LinearLayout>