<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/xlarge_margin"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/xlarge_padding"
    android:paddingTop="@dimen/xlarge_padding"
    android:paddingRight="@dimen/xlarge_padding"
    android:paddingBottom="@dimen/xlarge_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/large_widget_size"
        android:layout_height="@dimen/large_widget_size"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/normal_padding"
        app:srcCompat="@drawable/ic_kitty_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_padding"
        android:textColor="@color/white"
        android:text="@string/nav_header_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
